cmake_minimum_required(VERSION 2.8)
project(ipc-bench C)

add_compile_options(-Wall -Wextra -Wpedantic)

add_executable(pipe_lat src/pipe_lat.c)
add_executable(pipe_thr src/pipe_thr.c)
add_executable(tcp_lat src/tcp_lat.c)
add_executable(tcp_local_lat src/tcp_local_lat.c)
add_executable(tcp_remote_lat src/tcp_remote_lat.c)
add_executable(tcp_thr src/tcp_thr.c)
add_executable(udp_lat src/udp_lat.c)
add_executable(unix_lat src/unix_lat.c)
add_executable(unix_thr src/unix_thr.c)
add_executable(gettimeofday src/gettimeofday.c)
add_executable(sysv_msgqueue src/sysv_msgqueue.c)
add_executable(sysv_msgqueue_multi src/sysv_msgqueue_multi.c)
add_executable(wakeup_latency src/wakeup_latency.c)
add_executable(sysv_semaphore src/sysv_semaphore.c)
if (NOT APPLE)
 add_executable(posix_sharedmem src/posix_sharedmem.c)
 target_link_libraries(posix_sharedmem pthread)
 target_link_libraries(posix_sharedmem rt)

 add_executable(posix_sharedmem_multi src/posix_sharedmem_multi.c)
 target_link_libraries(posix_sharedmem_multi pthread)
 target_link_libraries(posix_sharedmem_multi rt)

 add_executable(posix_msgqueue src/posix_msgqueue.c)
 target_link_libraries(posix_msgqueue pthread)
 target_link_libraries(posix_msgqueue rt)
endif()
